...
    private lazy var cellImageView: UIImageView = {
        let view = UIImageView()
        view.image = UIImage(named: "ic.scribble.variable")
        view.contentMode = .scaleAspectFill
        view.backgroundColor = .clear
        view.isAccessibilityElement = true
        view.accessibilityIdentifier = "Photo"
        
        return view
    }()
    
    private lazy var gradientView: GradientView = {
        let view = GradientView()
...
    }()
    
    private lazy var likeButton: UIButton = {
        let view = UIButton(type: .custom)
        view.setImage(UIImage(named: "ic.like"), for: .normal)
        view.tintColor = .ypWhiteAlpha50
        view.accessibilityIdentifier = "Like Button"
        view.addTarget(self, action: #selector(likeButtonClicked), for: .touchUpInside)
        view.isAccessibilityElement = true
        
        return view
    }()
    
...
