...
        view.layer.cornerRadius = 16
        view.backgroundColor = .ypWhite
        view.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        view.setTitleColor(.ypBlack, for: .normal)
        view.setTitle("Войти", for: .normal)
        view.addTarget(self, action: #selector(switchToWebViewController), for: .touchUpInside)
        view.accessibilityIdentifier = "Authenticate"
        return view
    }()
    
    private lazy var logoImageView: UIImageView = {
        let view = UIImageView()
        view.image = UIImage(named: "ic.unsplash")
...
